--- a/src/Pages/Index.cshtml
+++ b/src/Pages/Index.cshtml
@@ -10,5 +10,5 @@
 </div>
 
 <div class="row mb-auto">
-    <p>Student name is @Model.StudentName</p>
+    <p>Docker Compose is watching you, @Model.StudentName!</p>
 </div>
